# GitSage

./: .gitignore  README.md  agents.md  implementation_plan.md  pyproject.toml  walkthrough.md
src/git_sage/: __init__.py  main.py
src/git_sage/agents/: __init__.py  bug_agent.py  chair_agent.py  complexity_agent.py  fix_agent.py  graph.py  security_agent.py  state.py  style_agent.py
src/git_sage/commands/: __init__.py  blame.py  changelog.py  commit.py  config_cmd.py  explain.py  fix.py  review.py
src/git_sage/config/: __init__.py  settings.py
src/git_sage/git/: __init__.py  context.py  diff_parser.py  patch.py
src/git_sage/llm/: __init__.py  provider.py
src/git_sage/output/: __init__.py  console.py  review_report.py  spinners.py
src/git_sage/utils/: __init__.py  tokens.py
tests/: __init__.py  conftest.py  test_diff_parser.py  test_settings.py
